# django-devcontainer

./: .env.sample  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh
app/app/: beat.py  celery.py  settings.py
app/app/services/: env_manager.py
