[tool.poetry]
name = "django-devcontainer"
version = "0.1.0"
description = ""
authors = ["Pumidol Leelerdsakulvong <pumidol.l@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
celery = {extras = ["redis"], version = "^5.2.7"}
whitenoise = "^6.4.0"
psycopg = {extras = ["binary"], version = "^3.1.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
